--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,25 @@
   "rules": {
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
-    "camelcase":"off",
+    "camelcase": "off",
+    "no-useless-constructor": "off",
     "@typescript-eslint/no-unused-vars": [
-      "error", {
-        "argsIgnorePattern":"_"
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": [
+          "PascalCase"
+        ],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
       }
     ],
     "import/extensions": [
