--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -24,12 +26,13 @@
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "6.8.0",
